<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:order="1"
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_bass_label" />

    <CheckBoxPreference
        android:order="2"
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_mid_label" />

    <CheckBoxPreference
        android:order="3"
        android:defaultValue="@bool/pref_show_trebel_default"
        android:key="@string/pref_show_trebel_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_trebel_label" />

    <!-- TODO (1) Add two more checkboxes for the treble and mid-range -->
</PreferenceScreen>
